[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "openmusic_api"
version = "1.0.0"
authors = [
    { name="Hanyang Liu", email="pika.and.scratch@gmail.com" },
]
description = "Provides the API class necessary to create plugins for the application OpenMusic"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Frankanator8/openMusicPlugins"
Issues = "https://github.com/pypa/openMusicPlugins/issues"